--- a/index.html
+++ b/index.html
@@ -44,20 +44,10 @@
   </head>
 
   <body>
+  <h1>Lab Grid System</h1>
   <div class="contenedor">
 	  <ul class="bandera">
 		  <li class="bandera-first"></li>
-		  <li></li>
-		  <li></li>
-		  <li></li>
-		  <li></li>
-		  <li></li>
-		  <li></li>
-		  <li></li>
-		  <li></li>
-		  <li></li>
-		  <li></li>
-		  <li></li>
 		  <li></li>
 		  <li></li>
 		  <li></li>
